Allow timezone parameter to be passed in on any request.
Added a 'run_now' to the job api to allow any job to be triggered immediately.

Added total_jobs and total_enabled to job stats.
